modified text of terymnal

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.6.1",
+    "termynal": "^0.0.4",
+    "typewriter-effect": "^2.19.0",
+    "typewriting": "^1.2.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
