--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-rough-notation": "^1.0.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-spring": "^9.6.1",
     "termynal": "^0.0.4",
     "typewriter-effect": "^2.19.0",
